--- a/css/style.css
+++ b/css/style.css
@@ -99,13 +99,13 @@ nav ul {
   /* end of nav bar layout */ 
 
 aside {
-    background-color: #a9c6ff;
+    background-color: #9cbaf8;
     padding: 3em;
     font-family: sans-serif;
 }
 
 main {
-    background-color: #9dc9f5;
+    background-color: #bedeff;
     padding: 3em;
     font-family: sans-serif;
 }
