--- a/css/style.css
+++ b/css/style.css
@@ -99,13 +99,13 @@ nav ul {
   /* end of nav bar layout */ 
 
 aside {
-    background-color: #9cbaf8;
+    background-color: #87abf3;
     padding: 3em;
     font-family: sans-serif;
 }
 
 main {
-    background-color: #bedeff;
+    background-color: #c3e1ff;
     padding: 3em;
     font-family: sans-serif;
 }
