--- a/css/style.css
+++ b/css/style.css
@@ -99,7 +99,7 @@ nav ul {
   /* end of nav bar layout */ 
 
 aside {
-    background-color: #87abf3;
+    background-color: #97b9ff;
     padding: 3em;
     font-family: sans-serif;
 }
