--- a/css/style.css
+++ b/css/style.css
@@ -58,7 +58,8 @@ PAGE ONE STYLING
 /* nav bar layout */ 
 
 nav {
-    width: 100%;
+    margin-left: auto;
+    margin-right: auto;
     font-family: sans-serif;
     background-color:#9999ff;
 }
