--- a/css/style.css
+++ b/css/style.css
@@ -56,6 +56,11 @@ PAGE ONE STYLING
 }
 
 /* nav bar layout */ 
+.nav {
+    font-family: sans-serif;
+    margin-left: auto;
+    margin-right: auto;
+}
 
 nav {
     background-image: url("../images/gradient.png");
@@ -70,9 +75,6 @@ nav {
  
 nav ul {
     list-style-type: none;
-    font-family: sans-serif;
-    margin-left: auto;
-    margin-right: auto;
     font-family: sans-serif;
     margin: 0;
     padding: 0;
