--- a/css/style.css
+++ b/css/style.css
@@ -63,7 +63,7 @@ PAGE ONE STYLING
 }
 
 nav {
-    background-image: url("../images/gradient.png");
+    background-image: url(../images/gradient.png);
     width: 100%;
 }
 
