--- a/css/style.css
+++ b/css/style.css
@@ -58,7 +58,7 @@ PAGE ONE STYLING
 /* nav bar layout */ 
 
 nav {
-    background-image: url(../images/gradient.png);
+    background-image: url(../images/newgradient.png);
     width: 100%;
 }
 
@@ -79,6 +79,8 @@ nav ul {
   nav li {
     float: left;
     font-family: sans-serif;
+    margin-left: auto;
+    margin-right: auto;
   }
   
   nav li a {
