--- a/css/style.css
+++ b/css/style.css
@@ -58,7 +58,7 @@ PAGE ONE STYLING
 /* nav bar layout */ 
 
 nav {
-    background-image: url(../images/newgradient.png);
+    background-image: url(../images/finalgradient.png);
     width: 100%;
 }
 
