--- a/css/style.css
+++ b/css/style.css
@@ -59,7 +59,6 @@ PAGE ONE STYLING
 
 nav {
     background-image: url(../images/finalgradient.png);
-    width: 100%;
 }
 
 /* COLORS FOR THE IMAGE GRADIENT: 
@@ -71,7 +70,8 @@ nav {
 nav ul {
     list-style-type: none;
     font-family: sans-serif;
-    margin: 0;
+    margin-left: auto;
+    margin-right: auto;
     padding: 0;
     overflow: hidden;
   }
