--- a/css/style.css
+++ b/css/style.css
@@ -70,8 +70,7 @@ nav {
 nav ul {
     list-style-type: none;
     font-family: sans-serif;
-    margin-left: auto;
-    margin-right: auto;
+    margin-left: 0;
     padding: 0;
     overflow: hidden;
   }
