--- a/css/style.css
+++ b/css/style.css
@@ -70,7 +70,7 @@ nav {
 nav ul {
     list-style-type: none;
     font-family: sans-serif;
-    margin-left: 0;
+    margin: 0;
     padding: 0;
     overflow: hidden;
   }
