--- a/css/style.css
+++ b/css/style.css
@@ -111,7 +111,7 @@ main {
 }
 
 .sadielibrary {
-    width: 400px;
+    width: 50%;
     height: auto;
     display: block;
     align-content: center;
