--- a/css/style.css
+++ b/css/style.css
@@ -158,3 +158,54 @@ HACKER PAGE STYLING
     width: 25%;
     height: auto;
 }
+
+/* ---------------------------------------------------
+------------------------------------------------------
+COMP D PAGE STYLING 
+------------------------------------------------------
+----------------------------------------------------*/
+.instagrid {
+    display: grid;
+    grid-template-columns: repeat (2, 1fr);
+    gap: 10px;
+    grid-auto-rows: minmax(400px, auto);
+}
+.post1 {
+    grid-column: 1/2;
+    grid-row: 1;
+}
+
+.post2 {
+    grid-column: 2/2;
+    grid-row: 1;    
+}
+
+.post3 {
+    grid-column: 1/2;
+    grid-row: 1;
+}
+
+.post4 {
+    grid-column: 2/2;
+    grid-row: 1;    
+}
+
+.post5 {
+    grid-column: 1/2;
+    grid-row: 1;
+}
+
+.post6 {
+    grid-column: 2/2;
+    grid-row: 1;    
+}
+x
+.post7 {
+    grid-column: 1/2;
+    grid-row: 1;
+}
+
+.post8 {
+    grid-column: 2/2;
+    grid-row: 1; 
+}
