--- a/css/style.css
+++ b/css/style.css
@@ -111,7 +111,7 @@ main {
 }
 
 .sadielibrary {
-    width: 50%;
+    width: 400px;
     height: auto;
     display: block;
     align-content: center;
@@ -166,46 +166,20 @@ COMP D PAGE STYLING
 ----------------------------------------------------*/
 .instagrid {
     display: grid;
-    grid-template-columns: repeat (2, 1fr);
+    grid-template-rows: 200px 200px;
+    grid-template-columns: 200px 200px 200px 200px;
+    overflow: auto;
     gap: 10px;
-    grid-auto-rows: minmax(400px, auto);
+    padding: 10px;
 }
-.post1 {
-    grid-column: 1/2;
-    grid-row: 1;
-}
-
-.post2 {
-    grid-column: 2/2;
-    grid-row: 1;    
+ 
+.instagrid img {
+    width: 150px;
+    height: auto;
+    align-content: center;
 }
 
-.post3 {
-    grid-column: 1/2;
-    grid-row: 1;
-}
-
-.post4 {
-    grid-column: 2/2;
-    grid-row: 1;    
-}
-
-.post5 {
-    grid-column: 1/2;
-    grid-row: 1;
-}
-
-.post6 {
-    grid-column: 2/2;
-    grid-row: 1;    
-}
-x
-.post7 {
-    grid-column: 1/2;
-    grid-row: 1;
-}
-
-.post8 {
-    grid-column: 2/2;
-    grid-row: 1; 
+.instagrid > div {
+    text-align: center;
+    padding: 20px;
 }
